--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "npm run serve"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
+    "echarts": "^5.2.2",
     "element-plus": "^1.0.1-alpha.19",
     "vue": "3.0.3",
     "vue-router": "^4.0.0-0",
