--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.7",
     "echarts": "^5.2.2",
     "element-plus": "^1.0.1-alpha.19",
+    "lodash.debounce": "^4.0.8",
     "vue": "3.0.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
